ecmascript/parser/tests/test262-error-references/fail/3d3e6ce2b81a224d.js.stderr
error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/3d3e6ce2b81a224d.js:1:22
  |
1 | [[[[[[[[[[[[[[[[[[[[{a=b}]]]]]]]]]]]]]]]]]]]]
  |                      ^^^

